--- a/outils/bouliers/boulier-cycle-2/boulier-cycle2.html
+++ b/outils/bouliers/boulier-cycle-2/boulier-cycle2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
-<title>Boulier Rekenrek Pro - Version Icone Plein Ecran</title>
+<title>Boulier Rekenrek Pro - Version Largeur Fixe</title>
 <style>
   :root {
     --bg: #1a1a1a; --wood: #b08d57; --rod: #888; --ui: #2a2a2a;
@@ -45,9 +45,9 @@
     justify-content: flex-start; overflow: hidden;
   }
 
-  /* Marge de 70px pour l'écriture au-dessus du boulier */
+  /* Marge réduite à 45px pour laisser de la place aux 10 lignes sans rétrécir */
   #scaler {
-    margin-top: 70px; 
+    margin-top: 45px; 
     display: flex; flex-direction: column; align-items: center;
     transform-origin: top center; pointer-events: none;
   }
@@ -181,12 +181,17 @@
   function autoScale() {
     const availableW = window.innerWidth - 30;
     const isLand = window.innerWidth > window.innerHeight && window.innerHeight < 500;
-    const margin = isLand ? 40 : 80; 
+    
+    // Marge de sécurité réduite sur PC (40px)
+    const margin = isLand ? 40 : 40; 
     const availableH = window.innerHeight - topBar.offsetHeight - margin;
     const rowH = isLand ? 45 : 56;
-    const contentH = (isLand ? 35 : 120) + (rowH * rowsCount);
-    const maxScale = (window.innerWidth > 1024) ? 1.25 : 1.1;
+    const contentH = (isLand ? 35 : 100) + (rowH * rowsCount);
+
+    // On autorise un scale plus généreux sur PC pour verrouiller la largeur
+    const maxScale = (window.innerWidth > 1024) ? 1.35 : 1.1;
     currentScale = Math.min(maxScale, availableW / 880, availableH / contentH);
+    
     scaler.style.transform = `scale(${currentScale})`;
     resizeCanvas();
   }
