--- a/outils/bouliers/index.html
+++ b/outils/bouliers/index.html
@@ -96,7 +96,7 @@
     <div class="wrapper">
         <section class="grid">
             <div class="card">
-                <h3>C</h3>
+                <h3>Rekenrek</h3>
                 <p>Cycle 2 · Cycle 3</p>
                 <a class="btn-chip" href="boulier-cycle-2/">Ouvrir</a>
             </div>
