--- a/outils/bouliers/index.html
+++ b/outils/bouliers/index.html
@@ -98,13 +98,13 @@
             <div class="card">
                 <h3>Rekenrek</h3>
                 <p>Cycle 2 · Cycle 3</p>
-                <a class="btn-chip" href="boulier-cycle-2/">Ouvrir</a>
+                <a class="btn-chip" href="rekenrek/">Ouvrir</a>
             </div>
 
             <div class="card">
                 <h3>Boulier Montessori</h3>
                 <p>Cycle 3 · Cycle 4</p>
-                <a class="btn-chip" href="boulier-cycle-3/">Ouvrir</a>
+                <a class="btn-chip" href="boulier_montessori/">Ouvrir</a>
             </div>
 
             <div class="card">
