--- a/outils/bouliers/index.html
+++ b/outils/bouliers/index.html
@@ -29,6 +29,7 @@
         }
         .back-link:hover {
             color: #2563eb;
+            text-decoration: none; /* Empêche le soulignement ici aussi */
         }
         .grid {
             display: grid;
@@ -37,7 +38,7 @@
         }
         /* Transformation de la carte en lien complet */
         .card-link {
-            text-decoration: none;
+            text-decoration: none; /* SUPPRIME LE SOULIGNEMENT */
             color: inherit;
             display: block;
             background: white;
@@ -52,6 +53,7 @@
             transform: translateY(-8px);
             box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1);
             border-color: #2563eb;
+            text-decoration: none; /* SÉCURITÉ POUR LE SURVOL */
         }
         .card-link h3 {
             margin: 0;
