--- a/outils/bouliers/rekenrek/index.html
+++ b/outils/bouliers/rekenrek/index.html
@@ -19,7 +19,7 @@
             margin-bottom: 3rem;
         }
         .back-link {
-            text-decoration: none; /* Pas de soulignement */
+            text-decoration: none;
             color: #64748b;
             font-weight: 500;
             display: flex;
@@ -35,13 +35,14 @@
             display: grid;
             gap: 2rem;
             grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            padding-bottom: 3rem;
         }
         .card-link {
-            text-decoration: none; /* Pas de soulignement */
+            text-decoration: none;
             color: inherit;
             display: block;
             background: white;
-            padding: 3rem 2rem;
+            padding: 2.5rem 1.5rem;
             border-radius: 16px;
             border: 1px solid #e2e8f0;
             box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05);
@@ -56,7 +57,7 @@
         }
         .card-link h3 {
             margin: 0;
-            font-size: 1.5rem;
+            font-size: 1.4rem;
             color: #1e293b;
             transition: color 0.2s;
         }
@@ -64,11 +65,11 @@
             color: #2563eb;
         }
         .card-link p {
-            margin-top: 1rem;
+            margin-top: 0.75rem;
             color: #64748b;
-            font-size: 0.95rem;
+            font-size: 0.9rem;
         }
-        footer { margin-top: 4rem; }
+        footer { margin-top: 2rem; }
     </style>
 </head>
 <body>
@@ -99,7 +100,27 @@
 
             <a href="pousser_des_nombres.html" class="card-link">
                 <h3>Pousser des nombres</h3>
-                <p>Manipuler pour construire les nombres</p>
+                <p>Construire des nombres par manipulation</p>
+            </a>
+
+            <a href="cache-cache.html" class="card-link">
+                <h3>Cache-cache</h3>
+                <p>Trouver le nombre de billes cachées</p>
+            </a>
+
+            <a href="comparateur.html" class="card-link">
+                <h3>Comparateur</h3>
+                <p>Comparer deux quantités sur le boulier</p>
+            </a>
+
+            <a href="jeu_des_doubles.html" class="card-link">
+                <h3>Jeu des doubles</h3>
+                <p>Travailler la mémorisation des doubles</p>
+            </a>
+
+            <a href="presque_doubles.html" class="card-link">
+                <h3>Presque doubles</h3>
+                <p>Utiliser les doubles pour calculer</p>
             </a>
         </section>
     </div>
