--- a/outils/bouliers/rekenrek/index.html
+++ b/outils/bouliers/rekenrek/index.html
@@ -122,6 +122,10 @@
                 <h3>Presque doubles</h3>
                 <p>Utiliser les doubles pour calculer</p>
             </a>
+             <a href="tables.html" class="card-link">
+                <h3>Les tables de multiplication</h3>
+                <p>Apprenez-les autrement !</p>
+            </a>
         </section>
     </div>
 </main>
