--- a/outils/bouliers/rekenrek/lecture_de_nombres.html
+++ b/outils/bouliers/rekenrek/lecture_de_nombres.html
@@ -6,9 +6,14 @@
 <title>Rekenrek Flash - Version XL Stable</title>
 <style>
   :root {
-    --bg: #1a1a1a; --wood: #b08d57; --rod: #888; --ui: #2a2a2a;
+    --bg: #1a1a1a; 
+    --wood: #b08d57;
+    --rod: #888; --ui: #2a2a2a;
     --accent: #0f6cf9; --success: #4caf50; --error: #f44336;
+    --bead-white: #ffffff;
   }
+  
+  body.blue-mode { --bead-white: #2196f3; }
 
   body, html { 
     margin: 0; padding: 0; width: 100%; height: 100%; 
@@ -53,6 +58,13 @@
     visibility: hidden;
   }
 
+  #abacus-frame::before, #abacus-frame::after {
+    content: ""; position: absolute; top: 0; bottom: 0; width: 30px;
+    background: var(--wood); z-index: 20; pointer-events: none;
+  }
+  #abacus-frame::before { left: -30px; }
+  #abacus-frame::after { right: -30px; }
+
   .row { position: relative; height: 56px; width: 100%; }
   .rod { position: absolute; width: 100%; height: 4px; background: var(--rod); top: 50%; transform: translateY(-50%); z-index: 1; }
   
@@ -62,7 +74,9 @@
     box-shadow: inset -3px -3px 6px rgba(0,0,0,0.4), 2px 2px 5px rgba(0,0,0,0.5);
   }
   .bead.red { background: radial-gradient(circle at 30% 30%, #ff5f5f, #a00); }
-  .bead.white { background: radial-gradient(circle at 30% 30%, #ffffff, #bbb); }
+  .bead.white { background: radial-gradient(circle at 30% 30%, var(--bead-white), #bbb); }
+  
+  body.blue-mode .bead.white { background: radial-gradient(circle at 30% 30%, var(--bead-white), #0d47a1); }
 
   #feedback { height: 75px; font-size: 48px; font-weight: bold; margin: 10px 0; display: flex; align-items: center; justify-content: center; text-shadow: 0 2px 4px rgba(0,0,0,0.8); }
 
@@ -101,10 +115,12 @@
   .btn-main:active { transform: translateY(4px); box-shadow: 0 2px 0 #0a4eb3; }
   .btn-main:disabled { background: #555; box-shadow: none; cursor: wait; }
 
-  select {
+  select, .btn-small {
     background: #444; color: white; border: none; padding: 12px;
     border-radius: 8px; font-weight: bold; font-size: 22px; cursor: pointer;
   }
+  
+  .btn-small { font-size: 16px; padding: 10px; }
 </style>
 </head>
 <body>
@@ -121,8 +137,11 @@
       <input type="range" id="speed-slider" min="500" max="8000" step="500" value="2000" oninput="updateSpeedLabel()">
       <span id="speed-label" style="font-weight: bold; min-width: 50px;">2.0s</span>
     </div>
+    <button class="btn-small" onclick="toggleColorMode()">🔵 Bleu</button>
   </div>
-  <div style="font-weight: bold; font-size: 28px; color: var(--accent);">REKENREK FLASH</div>
+  
+  <div style="font-weight: bold; font-size: 28px; color: white;">REKENREK FLASH</div>
+  
   <div class="score-board">
     <span class="score-good">✅ <span id="count-good">0</span></span>
     <span class="score-bad">❌ <span id="count-bad">0</span></span>
@@ -149,6 +168,7 @@
 <script>
   let currentRange = 20, targetNumber = -1, goodScore = 0, badScore = 0;
   let gameState = "IDLE"; let flashTimer = null;
+  let isBlue = false;
   
   const frame = document.getElementById('abacus-frame');
   const keypad = document.getElementById('keypad');
@@ -157,8 +177,16 @@
   const feedback = document.getElementById('feedback');
   const speedSlider = document.getElementById('speed-slider');
   const speedLabel = document.getElementById('speed-label');
+  
+  const BEAD_W = 38;
 
   function updateSpeedLabel() { speedLabel.innerText = (speedSlider.value / 1000).toFixed(1) + "s"; }
+
+  function toggleColorMode() { 
+      isBlue = !isBlue; 
+      document.body.classList.toggle('blue-mode');
+      document.querySelector('.btn-small[onclick="toggleColorMode()"]').textContent = isBlue ? "⚪ Blanc" : "🔵 Bleu";
+  }
 
   function updateMode() {
     currentRange = parseInt(document.getElementById('mode-select').value);
@@ -219,8 +247,8 @@
       const activeInRow = Math.min(10, remaining);
       remaining -= activeInRow;
       beads.forEach((b, bIdx) => {
-        if (bIdx < activeInRow) b.style.left = (bIdx * 40) + "px";
-        else b.style.left = (820 - (10 - bIdx) * 40) + "px";
+        if (bIdx < activeInRow) b.style.left = (bIdx * BEAD_W) + "px";
+        else b.style.left = (820 - (10 - bIdx) * BEAD_W) + "px";
       });
     });
     startFlash();
@@ -250,7 +278,8 @@
       feedback.innerHTML = "<span style='color:var(--success)'>Bonne réponse ! ✅</span>";
       if (element) element.classList.add('correct');
       frame.style.visibility = "visible";
-      actionBtn.innerText = "🔄 Suivant"; actionBtn.disabled = false;
+      // Correction : Flèche droite
+      actionBtn.innerText = "Suivant ➔"; actionBtn.disabled = false;
     } else {
       badScore++;
       document.getElementById('count-bad').innerText = badScore;
@@ -282,7 +311,6 @@
   function autoScale() {
     const availableW = window.innerWidth - 40;
     const availableH = window.innerHeight - 80;
-    // On resserre les dimensions de référence pour agrandir le rendu
     const contentW = currentRange === 100 ? 1220 : 920;
     const contentH = currentRange === 100 ? 680 : 640;
     const scale = Math.min(1.4, availableW / contentW, availableH / contentH);
