--- a/outils/bouliers/rekenrek/pousser_des_nombres.html
+++ b/outils/bouliers/rekenrek/pousser_des_nombres.html
@@ -6,16 +6,15 @@
 <title>Rekenrek Constructeur - Version Pro</title>
 <style>
   :root {
-    --bg: #1a1a1a; --wood: #b08d57; --rod: #888; --ui: #2a2a2a;
+    --bg: #1a1a1a; 
+    --wood: #b08d57;
+    --rod: #888; --ui: #2a2a2a;
     --accent: #0f6cf9; --success: #4caf50; --error: #f44336;
     --neutral: #444;
-    /* Billes principales (Rouges) */
     --bead-main: #ff5f5f; --bead-main-dark: #a00;
-    /* Billes secondaires (Blanches par défaut) */
     --bead-sec: #ffffff; --bead-sec-dark: #bbb;
   }
 
-  /* Thème : Secondaire devient Bleu */
   body.theme-blue {
     --bead-sec: #3498db; --bead-sec-dark: #2980b9;
   }
@@ -63,6 +62,13 @@
     border-left: 30px solid var(--wood); border-right: 30px solid var(--wood);
     box-sizing: content-box; background: transparent;
   }
+
+  #abacus-frame::before, #abacus-frame::after {
+    content: ""; position: absolute; top: 0; bottom: 0; width: 30px;
+    background: var(--wood); z-index: 20; pointer-events: none;
+  }
+  #abacus-frame::before { left: -30px; }
+  #abacus-frame::after { right: -30px; }
 
   .row { position: relative; height: 56px; width: 100%; }
   .rod { position: absolute; width: 100%; height: 4px; background: var(--rod); top: 50%; transform: translateY(-50%); z-index: 1; }
@@ -113,11 +119,10 @@
       <option value="letters">Lettres</option>
       <option value="voice">Vocal (Oral)</option>
     </select>
-
-    <button class="btn-small" onclick="toggleTheme()">🎨 Blanc / Bleu</button>
+    <button class="btn-small" onclick="toggleTheme()">🔵 Bleu</button>
   </div>
   
-  <div style="font-weight: bold; font-size: 18px; color: #aaa;">REKENREK CONSTRUCTEUR</div>
+  <div style="font-weight: bold; font-size: 18px; color: white;">REKENREK CONSTRUCTEUR</div>
   
   <div class="score-board">
     <span class="score-good">✅ <span id="count-good">0</span></span>
@@ -144,6 +149,7 @@
   let states = []; 
   let currentScale = 1;
   let gameState = "IDLE";
+  let isBlue = false;
 
   const frame = document.getElementById('abacus-frame');
   const targetDiv = document.getElementById('target-display');
@@ -151,10 +157,12 @@
   const feedback = document.getElementById('feedback');
   const listenBtn = document.getElementById('btn-listen');
   
-  const BEAD_W = 38, GAP = 2, FRAME_W = 820;
+  const BEAD_W = 38, GAP = 0, FRAME_W = 820;
 
   function toggleTheme() {
+    isBlue = !isBlue;
     document.body.classList.toggle('theme-blue');
+    document.querySelector('.btn-small[onclick="toggleTheme()"]').textContent = isBlue ? "⚪ Blanc" : "🔵 Bleu";
   }
 
   function updateMode() {
@@ -218,14 +226,14 @@
       return tens[t] + (u === 1 ? "-et-un" : "-" + units[u]);
     }
     
-    if (n < 80) { // Zone 70-79 (Orthographe rectifiée : traits d'union partout)
+    if (n < 80) { 
       let u = n - 60;
       if (u === 10) return "soixante-dix";
       if (u === 11) return "soixante-et-onze";
       return "soixante-" + (u <= 16 ? units[u] : "dix-" + units[u-10]);
     }
     
-    if (n < 100) { // Zone 80-99
+    if (n < 100) { 
       if (n === 80) return "quatre-vingts";
       let u = n - 80;
       let suffix = (u <= 16) ? units[u] : "dix-" + units[u-10];
@@ -335,7 +343,8 @@
       goodScore++;
       document.getElementById('count-good').innerText = goodScore;
       feedback.innerHTML = "<span style='color:var(--success)'>Bravo ! Bonne réponse. ✅</span>";
-      actionBtn.innerText = "Suivant 🔄";
+      // Correction : Flèche droite pour Suivant
+      actionBtn.innerText = "Suivant ➔";
       actionBtn.classList.add('btn-success');
       if(document.getElementById('display-mode').value === 'voice') targetDiv.innerText = targetNumber;
     } else {
